# Python-Reminder

./: LICENSE  main.py  pyproject.toml
tests/: test_python_reminder.py
