[tool.poetry]
name = "Python-Reminder"
version = "0.1.0"
description = ""
authors = ["Evgenios Kastanias <eugenioska@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
PySide2 = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
